[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Shared/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/dogica.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
modulate = Color( 0.980392, 0.941176, 0.745098, 1 )
margin_left = 7.0
margin_right = 103.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "0"
valign = 1
uppercase = true

[node name="MessageLabel" type="Label" parent="."]
modulate = Color( 0.980392, 0.941176, 0.745098, 1 )
margin_top = 81.0
margin_right = 320.0
margin_bottom = 119.0
rect_pivot_offset = Vector2( 149, 28 )
custom_fonts/font = SubResource( 2 )
text = "The Hungry Cowboy"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
modulate = Color( 0.980392, 0.941176, 0.745098, 1 )
margin_left = 64.0
margin_top = 197.0
margin_right = 257.0
margin_bottom = 229.0
custom_fonts/font = SubResource( 3 )
text = "Start Game"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="controlsContainer" type="Node2D" parent="."]

[node name="W" type="ColorRect" parent="controlsContainer"]
margin_left = 25.0
margin_top = 276.0
margin_right = 44.0
margin_bottom = 295.0
color = Color( 0.980392, 0.941176, 0.745098, 0.658824 )

[node name="Label" type="Label" parent="controlsContainer/W"]
margin_right = 19.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 4 )
text = "w"
align = 1
valign = 1

[node name="A" type="ColorRect" parent="controlsContainer"]
margin_left = 4.0
margin_top = 297.0
margin_right = 23.0
margin_bottom = 316.0
color = Color( 0.980392, 0.941176, 0.745098, 0.658824 )

[node name="Label" type="Label" parent="controlsContainer/A"]
margin_right = 19.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 4 )
text = "a"
align = 1
valign = 1

[node name="S" type="ColorRect" parent="controlsContainer"]
margin_left = 25.0
margin_top = 297.0
margin_right = 44.0
margin_bottom = 316.0
color = Color( 0.980392, 0.941176, 0.745098, 0.658824 )

[node name="Label" type="Label" parent="controlsContainer/S"]
margin_right = 19.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 4 )
text = "s"
align = 1
valign = 1

[node name="D" type="ColorRect" parent="controlsContainer"]
margin_left = 46.0
margin_top = 297.0
margin_right = 65.0
margin_bottom = 316.0
color = Color( 0.980392, 0.941176, 0.745098, 0.658824 )

[node name="Label" type="Label" parent="controlsContainer/D"]
margin_right = 19.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 4 )
text = "d"
align = 1
valign = 1

[node name="Space" type="ColorRect" parent="controlsContainer"]
margin_left = 86.0
margin_top = 296.0
margin_right = 189.0
margin_bottom = 315.0
color = Color( 0.980392, 0.941176, 0.745098, 0.658824 )

[node name="Label" type="Label" parent="controlsContainer/Space"]
margin_left = 1.0
margin_top = -1.0
margin_right = 103.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 4 )
text = "space"
align = 1
valign = 1

[node name="LeftClick" type="ColorRect" parent="controlsContainer"]
margin_left = 212.0
margin_top = 279.0
margin_right = 315.0
margin_bottom = 316.0
color = Color( 0.980392, 0.941176, 0.745098, 0.658824 )

[node name="Label" type="Label" parent="controlsContainer/LeftClick"]
margin_left = 1.0
margin_top = -1.0
margin_right = 103.0
margin_bottom = 36.0
custom_constants/line_spacing = 6
custom_fonts/font = SubResource( 4 )
text = "Left 
Click"
align = 1
valign = 1

[node name="MoveLabel" type="Label" parent="controlsContainer"]
modulate = Color( 0.980392, 0.941176, 0.745098, 1 )
margin_left = 5.0
margin_top = 256.0
margin_right = 69.0
margin_bottom = 270.0
custom_fonts/font = SubResource( 5 )
text = "Move"

[node name="DashLabel" type="Label" parent="controlsContainer"]
modulate = Color( 0.980392, 0.941176, 0.745098, 1 )
margin_left = 106.0
margin_top = 275.0
margin_right = 170.0
margin_bottom = 289.0
custom_fonts/font = SubResource( 5 )
text = "Dash"

[node name="ShootLabel" type="Label" parent="controlsContainer"]
modulate = Color( 0.980392, 0.941176, 0.745098, 1 )
margin_left = 218.0
margin_top = 261.0
margin_right = 298.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 5 )
text = "Shoot"

[node name="Intro" type="Label" parent="."]
modulate = Color( 0.980392, 0.941176, 0.745098, 1 )
margin_left = 20.0
margin_top = 88.0
margin_right = 302.0
margin_bottom = 156.0
custom_constants/line_spacing = 6
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
